set project configuration and finish calcuator default layout

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,55 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="KeyPad">
+        <item name="android:width">0dp</item>
+        <item name="android:height">0dp</item>
+        <item name="android:foreground">?android:selectableItemBackground</item>
+        <item name="layout_widthPercent">25%</item>
+        <item name="layout_heightPercent">15%</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="KeyPadOperation" parent="KeyPad">
+        <item name="android:contentDescription">@null</item>
+        <item name="android:scaleType">center</item>
+        <item name="android:background">@color/colorGoogleYellow</item>
+    </style>
+
+    <style name="KeyPadClear" parent="KeyPad">
+        <item name="android:background">@color/colorGoogleYellow</item>
+        <item name="android:text">Center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/keyPadClearText</item>
+        <item name="android:textSize">30dp</item>
+        <item name="layout_widthPercent">50%</item>
+    </style>
+
+    <style name="KeyPadNum" parent="KeyPad">
+        <item name="android:textSize">32dp</item>
+        <item name="android:textColor">@color/keyPadNumText</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/colorWarmGray</item>
+    </style>
+
+    <style name="Divider">
+        <item name="android:background">@color/lightDivider</item>
+    </style>
+
+    <style name="HorizontalDivider" parent="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+    </style>
+
+    <style name="VerticalDivider" parent="Divider">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
 </resources>
