--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+<android.support.percent.PercentRelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.plaincalculator.android.MainActivity">
+    android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/result_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorWarmGray"
+        app:layout_heightPercent="25%">
+
+    </RelativeLayout>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        style="@style/KeyPadClear"
+        android:id="@+id/clear_button"
+        android:layout_below="@+id/result_container" />
+
+    <ImageView
+        style="@style/KeyPadOperation"
+        android:id="@+id/exp_button"
+        android:layout_toRightOf="@id/clear_button"
+        android:layout_below="@id/result_container"
+        android:src="@drawable/icon_exponent"/>
+
+    <ImageView
+        style="@style/KeyPadOperation"
+        android:id="@+id/div_button"
+        android:layout_toRightOf="@id/exp_button"
+        android:layout_below="@id/result_container"
+        android:src="@drawable/icon_divide" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/one_button"
+        android:layout_below="@id/four_button"
+        android:text="1" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/two_button"
+        android:layout_toRightOf="@id/one_button"
+        android:layout_below="@id/five_button"
+        android:text="2"/>
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/three_button"
+        android:layout_toRightOf="@id/two_button"
+        android:layout_below="@id/six_button"
+        android:text="3"/>
+
+    <ImageView
+        style="@style/KeyPadOperation"
+        android:id="@+id/mul_button"
+        android:layout_toRightOf="@id/nine_button"
+        android:layout_below="@id/div_button"
+        android:src="@drawable/icon_multiply" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/four_button"
+        android:layout_below="@id/seven_button"
+        android:text="4" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/five_button"
+        android:layout_toRightOf="@id/four_button"
+        android:layout_below="@id/two_buttons"
+        android:text="5" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/six_button"
+        android:layout_toRightOf="@id/five_button"
+        android:layout_below="@id/nine_button"
+        android:text="6" />
+
+    <ImageView
+        style="@style/KeyPadOperation"
+        android:id="@+id/sub_button"
+        android:layout_toRightOf="@id/six_button"
+        android:layout_below="@id/nine_button"
+        android:src="@drawable/icon_minus"/>
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/seven_button"
+        android:layout_below="@id/clear_button"
+        android:text="7" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/two_buttons"
+        android:layout_toRightOf="@id/seven_button"
+        android:layout_below="@id/clear_button"
+        android:text="8" />
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/nine_button"
+        android:layout_toRightOf="@id/two_buttons"
+        android:layout_below="@id/exp_button"
+        android:text="9" />
+
+    <ImageView
+        style="@style/KeyPadOperation"
+        android:id="@+id/add_button"
+        android:layout_toRightOf="@id/three_button"
+        android:layout_below="@id/sub_button"
+        android:src="@drawable/icon_plus"/>
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/two_zero_button"
+        android:layout_below="@id/one_button"
+        android:text="00"/>
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/zero_button"
+        android:layout_toRightOf="@id/two_zero_button"
+        android:layout_below="@id/two_button"
+        android:text="0"/>
+
+    <TextView
+        style="@style/KeyPadNum"
+        android:id="@+id/point_button"
+        android:layout_toRightOf="@id/zero_button"
+        android:layout_below="@id/three_button"
+        android:text="."/>
+
+    <ImageView
+        style="@style/KeyPadOperation"
+        android:id="@+id/equal_button"
+        android:layout_toRightOf="@id/point_button"
+        android:layout_below="@id/add_button"
+        android:background="@color/colorGoogleRed"
+        android:src="@drawable/icon_equal" />
+
+    <View
+        style="@style/HorizontalDivider"
+        android:layout_below="@id/result_container" />
+
+    <View
+        style="@style/HorizontalDivider"
+        android:layout_below="@id/clear_button" />
+
+    <View
+        style="@style/HorizontalDivider"
+        android:layout_below="@id/seven_button" />
+
+    <View
+        style="@style/HorizontalDivider"
+        android:layout_below="@id/four_button" />
+
+    <View
+        style="@style/HorizontalDivider"
+        android:layout_below="@id/one_button" />
+
+    <View
+        style="@style/VerticalDivider"
+        android:layout_toRightOf="@id/seven_button"
+        android:layout_below="@id/clear_button" />
+
+    <View
+        style="@style/VerticalDivider"
+        android:layout_toRightOf="@id/clear_button"
+        android:layout_below="@id/result_container" />
+
+    <View
+        style="@style/VerticalDivider"
+        android:layout_toRightOf="@id/exp_button"
+        android:layout_below="@id/result_container" />
+
+</android.support.percent.PercentRelativeLayout>
