--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">@color/colorGoogleRed</color>
+    <color name="colorPrimaryDark">@color/colorGoogleRed</color>
+    <color name="colorAccent">@color/colorAmber</color>
+
+    <color name="colorMint">#3eb489</color>
+    <color name="colorJade">#00a86b</color>
+    <color name="colorAmber">#ffbf00</color>
+
+    <color name="colorGoogleBlue">#4285F4</color>
+    <color name="colorGoogleGreen">#34A853</color>
+    <color name="colorGoogleRed">#EA4335</color>
+    <color name="colorGoogleYellow">#FBBC05</color>
+
+    <color name="colorBrightGray">#f1f1f1</color>
+    <color name="colorWarmGray">#fff1e2</color>
+
+    <color name="keyPadNumText">#73000000</color>
+    <color name="keyPadClearText">#B3FFFFFF</color>
+
+    <color name="lightDivider">#1a000000</color>
+
 </resources>
