Add icon and fix colour

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="colorGoogleYellow">#FBBC05</color>
 
     <color name="colorBrightGray">#f1f1f1</color>
-    <color name="colorWarmGray">#fff1e2</color>
+    <color name="colorWarmGray">#f5f1ed</color>
 
     <color name="keyPadNumText">#73000000</color>
     <color name="keyPadClearText">#B3FFFFFF</color>
